metadata/force-app/main/default/objects/Community_Member_Activity__c/Community_Member_Activity__c.object-meta.xml
<CustomObject>
    <description>Community Member Activity represents an event that takes place on the community related to a particular community member.</description>
    <label>Community Member Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Member Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>