metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Community Member Activity is matched to an Account based on the Contact of the Community Member the activity relates to.</description>
    <inlineHelpText>Community Member Activity is matched to an Account based on the Contact of the Community Member the activity relates to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Member Activities</relationshipLabel>
    <relationshipName>Community_Member_Activities_Account</relationshipName>
    <type>Lookup</type>
</CustomField>