metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>The date/time at which the activity occurred on the community.</description>
    <inlineHelpText>The date/time at which the activity occurred on the community.</inlineHelpText>
    <label>Activity Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>