metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Community_Member__c.field-meta.xml
<CustomField>
    <fullName>Community_Member__c</fullName>
    <description>Community Member Activity must be related to a Community Member.</description>
    <inlineHelpText>Community Member Activity must be related to a Community Member.</inlineHelpText>
    <label>Community Member</label>
    <referenceTo>Community_Member__c</referenceTo>
    <relationshipLabel>Community Member Activities</relationshipLabel>
    <relationshipName>Community_Member_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>