metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Community Member Activity is matched to a Contact based on the Community Member the activity relates to.</description>
    <inlineHelpText>Community Member Activity is matched to a Contact based on the Community Member the activity relates to.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Member Activities</relationshipLabel>
    <relationshipName>Community_Member_Activities_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>