metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Reply_Content__c.field-meta.xml
<CustomField>
    <fullName>Reply_Content__c</fullName>
    <description>The content of the reply (to a question, article, or conversation). This content can change.</description>
    <inlineHelpText>The content of the reply (to a question, article, or conversation). This content can change.</inlineHelpText>
    <label>Reply Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>