metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Reply_URL_Public__c.field-meta.xml
<CustomField>
    <fullName>Reply_URL_Public__c</fullName>
    <description>A link to the reply in the frontend. If the topic or reply has been trashed, it cannot be viewed via this link.</description>
    <inlineHelpText>A link to the reply in the frontend. If the topic or reply has been trashed, it cannot be viewed via this link.</inlineHelpText>
    <label>Reply URL (Public)</label>
    <type>Url</type>
</CustomField>