metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique ID to identify an activity on the inSided platform.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique ID to identify an activity on the inSided platform.</inlineHelpText>
    <label>Request ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>