metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Topic_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Topic_Category_ID__c</fullName>
    <description>The unique ID of a category on the inSided community. You can use this when reporting to get data from a single category even if the category name has changed. Note: this ID can change if a topic is moved to another category.</description>
    <inlineHelpText>The unique ID of a category on the inSided community. You can use this when reporting to get data from a single category even if the category name has changed. Note: this ID can change if a topic is moved to another category.</inlineHelpText>
    <label>Topic Category ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>