metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Topic_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Category_Name__c</fullName>
    <description>The name of a category on the community. This name can change.</description>
    <inlineHelpText>The name of a category on the community. This name can change.</inlineHelpText>
    <label>Topic Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>