metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Topic_Content__c.field-meta.xml
<CustomField>
    <fullName>Topic_Content__c</fullName>
    <description>The content of the opening post of the community topic (question, article, conversation). This content can change.</description>
    <inlineHelpText>The content of the opening post of the community topic (question, article, conversation). This content can change.</inlineHelpText>
    <label>Topic Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>