metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Topic_ID__c.field-meta.xml
<CustomField>
    <fullName>Topic_ID__c</fullName>
    <description>The ID of a topic on the inSided community. This ID is unique per content type (question, conversation, article). You can use this when reporting to get data from a single topic even if the topic title has changed. Note: if the content type changes, then the topic ID will also change.</description>
    <inlineHelpText>The ID of a topic on the inSided community. This ID is unique per content type (question, conversation, article). You can use this when reporting to get data from a single topic even if the topic title has changed. Note: if the content type changes, then</inlineHelpText>
    <label>Topic ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>