metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Topic_Title__c.field-meta.xml
<CustomField>
    <fullName>Topic_Title__c</fullName>
    <description>The title of a topic on the community. This title can be changed.</description>
    <inlineHelpText>The title of a topic on the community. This title can be changed.</inlineHelpText>
    <label>Topic Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>