metadata/force-app/main/default/objects/Community_Member_Activity__c/fields/Topic_URL_Public__c.field-meta.xml
<CustomField>
    <fullName>Topic_URL_Public__c</fullName>
    <description>A link to the topic in the frontend. If the topic has been trashed, it cannot be viewed via this link.</description>
    <inlineHelpText>A link to the topic in the frontend. If the topic has been trashed, it cannot be viewed via this link.</inlineHelpText>
    <label>Topic URL (Public)</label>
    <type>Url</type>
</CustomField>