metadata/force-app/main/default/objects/Community_Member_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>idea</value>
    </filters>
    <label>All</label>
</ListView>